[project]
name = "boolq"
description = "Naturally-occurring yes/no question evaluation environment"
tags = ["text", "single-turn", "eval"]
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.8.post2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["boolq.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 20
rollouts_per_example = 5
